deploy/grafana/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-db
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: mysql
    spec:
      containers:
      - image: mysql:5.7
        imagePullPolicy: IfNotPresent
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: grafana-db-pvc
      restartPolicy: Always
