deploy/grafana/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-db
  namespace: grafana
spec:
  ports:
    - port: 3306
  selector:
    tier: mysql
  clusterIP: None
